newsletter fixed with flex

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -55,9 +55,9 @@
         <a class="button" href="#"><p>Comenzar</p></a>
     </section>
     <!-- Newsletter -->
-    <section class="newsletter row d-flex align-items-center flex-column d-lg-flex flex-lg-row">
-        <p class="newsletter-title col-6">Newsletter</p>
-        <div class="col-6">
+    <section class="newsletter">
+        <p class="newsletter-title">Newsletter</p>
+        <div>
             <form action="#">
                 <input type="text">
                 <input type="submit">
@@ -65,36 +65,38 @@
         </div>
     </section>
     <!-- FAQ -->
-    <section class="faq">
-        <h3>Preguntas frecuentes</h3>
-        <div class="questions-box">
-            <ul>
-                <li>
-                    <p class="fa-question">¿Lorem lorem?</p>
-                    <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
-                </li>
-                <li>
-                    <p class="fa-question">¿Lorem lorem?</p>
-                    <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
-                </li>
-                <li>
-                    <p class="fa-question">¿Lorem lorem?</p>
-                    <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
-                </li>
-                <li>
-                    <p class="fa-question">¿Lorem lorem?</p>
-                    <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
-                </li>
-                <li>
-                    <p class="fa-question">¿Lorem lorem?</p>
-                    <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
-                </li>
-                <li>
-                    <p class="fa-question">¿Lorem lorem?</p>
-                    <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
-                </li>
-            </ul>
+    <section class="faq container-fluid">
+        <div class="row d-flex justify-content-center">
+            <div class="col-11 col-lg-8 d-flex flex-column">
+                <h3>Preguntas frecuentes</h3>
+                <div class="questions-box">
+                    <ul>
+                        <li>
+                            <p class="fa-question">¿Lorem lorem?</p>
+                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
+                        </li>
+                        <li>
+                            <p class="fa-question">¿Lorem lorem?</p>
+                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
+                        </li>
+                        <li>
+                            <p class="fa-question">¿Lorem lorem?</p>
+                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
+                        </li>
+                        <li>
+                            <p class="fa-question">¿Lorem lorem?</p>
+                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
+                        </li>
+                        <li>
+                            <p class="fa-question">¿Lorem lorem?</p>
+                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
+        
+        
     </section>
     <!-- Partners -->
     <section class="partners">
