--- a/pages/index.html
+++ b/pages/index.html
@@ -55,9 +55,9 @@
         <a class="button" href="#"><p>Comenzar</p></a>
     </section>
     <!-- Newsletter -->
-    <section class="newsletter row d-flex align-items-center flex-column d-lg-flex flex-lg-row">
-        <p class="newsletter-title col-6">Newsletter</p>
-        <div class="col-6">
+    <section class="newsletter">
+        <p class="newsletter-title">Newsletter</p>
+        <div>
             <form action="#">
                 <input type="text">
                 <input type="submit">
