--- a/pages/index.html
+++ b/pages/index.html
@@ -51,6 +51,7 @@
     <!-- Hero -->
     <section class="hero container-fluid">
         <h1>Cursos intensivos de inglés</h1>
+        <div class="square"></div>
         <h2>Sumate a los nuevos lanzamientos de enero 2023</h2>
         <a class="button" href="#"><p>Comenzar</p></a>
     </section>
