New images, updated htmls and sass

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -21,32 +21,35 @@
         <!-- Navigation starts -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <!-- Logo -->
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../index.html" target="_self">
                 <img src="../images/logo-black.png" alt="">
             </a>
             <!-- Toggle button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Collapsible items -->
             <div class="collapse navbar-collapse" id="navbarText">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="./" target="_self">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./cursos.html" target="_self">Cursos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./faq.html" target="_self">FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html" target="_self">Contacto</a>
-                  </li>
-              </ul>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../index.html" target="_self">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./cursos.html" target="_self">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html" target="_self">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./faq.html" target="_self">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html" target="_self">Contacto</a>
+                    </li>
+                </ul>
             </div>
-          </nav>
-          <!-- Navigation ends -->
+        </nav>
+    <!-- Navigation ends -->
     </header>
     <!-- Hero -->
     <section class="hero container-fluid">
@@ -73,24 +76,16 @@
                 <div class="questions-box">
                     <ul>
                         <li>
-                            <p class="fa-question">¿Lorem lorem?</p>
-                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
+                            <strong><p class="fa-que">¿Qué validéz tienen los cursos?</p></strong>
+                            <p class="fa-answer">Los cursos están diagramados según los programas de la Universidad Tecnológica Nacional. Al finalizar, podrás acceder a los exámenes de la universidad para validar tu conocimiento con una certificación con resolución ministerial.</p>
                         </li>
                         <li>
-                            <p class="fa-question">¿Lorem lorem?</p>
-                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
+                            <strong><p class="fa-que"> ¿Hay algún descuento?</p></strong>
+                            <p class="fa-answer">Premiamos tu pago temprano (antes del 10 de cada mes), bonificando $1000 de tu cuota. Tus pagos tempranos nos ayudan afrontar los costos de nuestra infraestructura de forma ordenada.</p>
                         </li>
                         <li>
-                            <p class="fa-question">¿Lorem lorem?</p>
-                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
-                        </li>
-                        <li>
-                            <p class="fa-question">¿Lorem lorem?</p>
-                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
-                        </li>
-                        <li>
-                            <p class="fa-question">¿Lorem lorem?</p>
-                            <p class="fa-answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo qui error odit enim repellat porro commodi, numquam molestiae doloribus fuga ab iste esse? Dolorum velit nemo error illum. Pariatur, atque.</p>
+                            <strong><p class="fa-que"> ¿Hay algún descuento?</p></strong>
+                            <p class="fa-answer">Todos los cursos tienen un requerimiento de asistencia del 80%, pero tus inasistencias pueden justificarse y cada clase virtual queda grabada, por lo que no perderás clases del programa si tienes algún inconveniente para llegar..</p>
                         </li>
                     </ul>
                 </div>
@@ -117,11 +112,12 @@
     <footer>
         <div class="row">
             <ul class="col-12 col-lg-3 d-flex flex-column ">
-                <li><a href="./" target="_self">Inicio</a></li>
+                <li><a href="../index.html" target="_self">Inicio</a></li>
                 <li><a href="./cursos.html" target="_self">Cursos</a></li>
+                <li><a href="./nosotros.html" target="_self">Nosotros</a></li>
                 <li><a href="./faq.html" target="_self">FAQ</a></li>
                 <li><a href="./contacto.html" target="_self">Contacto</a></li>
-              </ul>
+            </ul>
             <ul class="col-12 col-lg-3">
                 <li><a href="#" target="_self">Prensa</a></li>
                 <li><a href="#" target="_self">Acceder</a></li>
@@ -133,7 +129,7 @@
                 </form>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="lower-footer container-fluid">
             <p class="copyright col-12">Bonfire - Todos los derechos reservados - 2022</p>
             <ul class="footer-social-icons">
                 <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
