--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Local stylesheet -->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- Awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- Google fonts -->
@@ -21,32 +21,35 @@
         <!-- Navigation starts -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <!-- Logo -->
-            <a class="navbar-brand" href="#">
-                <img src="../images/logo-black.png" alt="">
+            <a class="navbar-brand" href="./index.html" target="_self">
+                <img src="./images/logo-black.png" alt="">
             </a>
             <!-- Toggle button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Collapsible items -->
             <div class="collapse navbar-collapse" id="navbarText">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="./" target="_self">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./cursos.html" target="_self">Cursos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./faq.html" target="_self">FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html" target="_self">Contacto</a>
-                  </li>
-              </ul>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./index.html" target="_self">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/cursos.html" target="_self">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/nosotros.html" target="_self">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/faq.html" target="_self">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/contacto.html" target="_self">Contacto</a>
+                    </li>
+                </ul>
             </div>
-          </nav>
-          <!-- Navigation ends -->
+        </nav>
+    <!-- Navigation ends -->
     </header>
     <!-- Hero -->
     <section class="hero container-fluid">
@@ -70,8 +73,8 @@
         <div class="row d-flex justify-content-center">
             <div class="col-11 col-lg-8 d-flex flex-column">
                     <h3>Beneficios</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error perspiciatis doloribus temporibus ut assumenda repellendus. Fuga, harum inventore, nisi natus quisquam eius dolore similique neque, nihil dolores molestiae sint minus.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quas dolores, blanditiis error non vel excepturi beatae possimus? Molestias ex voluptas deserunt molestiae totam quidem eos atque accusamus aspernatur amet.</p>
+                    <p>Ofrecemos cursos que se adaptan al ritmo laboral y estudiantil de las personas. Desarrollamos las actividades en entornos digitales intuitivos y dinámicos.</p>
+                    <p>Al finalizar recibes un certificado de asistencia sin cargo y opcionalmente puedes acceder al certificado de la Universidad Tecnológica Nacional.</p>
             </div>
         </div>
     </section>
@@ -93,11 +96,12 @@
     <footer>
         <div class="row">
             <ul class="col-12 col-lg-3 d-flex flex-column ">
-                <li><a href="./" target="_self">Inicio</a></li>
-                <li><a href="./cursos.html" target="_self">Cursos</a></li>
-                <li><a href="./faq.html" target="_self">FAQ</a></li>
-                <li><a href="./contacto.html" target="_self">Contacto</a></li>
-              </ul>
+                <li><a href="./index.html" target="_self">Inicio</a></li>
+                <li><a href="./pages/cursos.html" target="_self">Cursos</a></li>
+                <li><a href="./pages/nosotros.html" target="_self">Nosotros</a></li>
+                <li><a href="./pages/faq.html" target="_self">FAQ</a></li>
+                <li><a href="./pages/contacto.html" target="_self">Contacto</a></li>
+            </ul>
             <ul class="col-12 col-lg-3">
                 <li><a href="#" target="_self">Prensa</a></li>
                 <li><a href="#" target="_self">Acceder</a></li>
@@ -109,7 +113,7 @@
                 </form>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="lower-footer container-fluid">
             <p class="copyright col-12">Bonfire - Todos los derechos reservados - 2022</p>
             <ul class="footer-social-icons">
                 <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
