--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,36 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <!-- Local stylesheet -->
+    <link rel="stylesheet" href="../style.css">
+    <!-- Awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Bonfire | Cursos intensivos de inglés</title>
 </head>
 <body>
     <header>
-        <figure>
-            <img src="./images/logo-black.png" alt="Bonfire logo" height="35">
-        </figure>
-        <ul>
-            <li><a href="/">Inicio</a></li>
-            <li><a href="/nosotros.html">Nosotros</a></li>
-            <li><a href="/cursos.html">Cursos</a></li>
-            <li><a href="/faq.html">FAQ</a></li>
-            <li><a href="/contacto.html">Contacto</a></li>
-        </ul>
+        <!-- Navigation starts -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <!-- Logo -->
+            <a class="navbar-brand" href="../index.html" target="_self">
+                <img src="../images/logo-black.png" alt="">
+            </a>
+            <!-- Toggle button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Collapsible items -->
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../index.html" target="_self">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./cursos.html" target="_self">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html" target="_self">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./faq.html" target="_self">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html" target="_self">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    <!-- Navigation ends -->
     </header>
-    <section class="hero">
-        <h1>Lorem impsun is simply dummy text</h1>
-        <h2>Lorem impsun is simply dummy text</h2>
-        <button><a href="#">Comenzar</a></button>
+    <!-- Hero -->
+    <section class="hero container-fluid">
+        <h1>Cursos intensivos de inglés</h1>
+        <div class="square"></div>
+        <h2>Sumate a los nuevos lanzamientos de enero 2023</h2>
+        <a class="button" href="#"><p>Comenzar</p></a>
     </section>
+    <!-- Newsletter -->
     <section class="newsletter">
-        <p>Newsletter</p>
+        <p class="newsletter-title">Newsletter</p>
         <div>
             <form action="#">
                 <input type="text">
@@ -38,74 +68,79 @@
             </form>
         </div>
     </section>
-    <section class="us">
-        <h3>Nosotros</h3>
-        <div class="team">
-            <div class="leader-box">
-                <figure class="leader-photo"></figure>
-                <p class="leader-name">Person 1</p>
-                <p class="leader-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, suscipit esse. Iure, veniam expedita similique laborum, ut nam debitis aliquid error inventore commodi quos eum saepe, pariatur voluptate deserunt labore!</p>
-            </div>
-            <div class="leader-box">
-                <figure class="leader-photo"></figure>
-                <p class="leader-name">Person 2</p>
-                <p class="leader-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus nesciunt odit ducimus alias, iure blanditiis debitis nemo. Placeat quos quia facere! Reiciendis quas reprehenderit repudiandae modi tempore recusandae rem quaerat?</p>
-            </div>
-            <div class="leader-box">
-                <figure class="leader-photo"></figure>
-                <p class="leader-name">Person 3</p>
-                <p class="leader-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nihil incidunt voluptatibus temporibus voluptatum blanditiis beatae nisi fugit reiciendis repellat, deleniti corporis atque quaerat at perferendis voluptates provident in hic.</p>
+    <!-- Us -->
+    <section class="us container-fluid">
+        <div class="row d-flex justify-content-center">
+            <div class="col-11">
+                <h3>Nosotros</h3>
+                <div class="team d-flex justify-content-center flex-column flex-lg-row">
+                    <div class="leader-box col-11 col-lg-3">
+                        <img src="../images/leader-1.jpg" alt="Líderes de Bonfire" class="leader-photo-1">
+                        <strong><p class="leader-name-1">Hernán Agustín Campos</p></strong>
+                        <p class="leader-description">Ejecutivo​ ensayista, ​director ejecutivo de la consultora Greenmantle,​ fundador de la aplicación de finanzas personales Ualá​. También es autor del libro La Sombra de Hitler.</p>
+                    </div>
+                    <div class="leader-box justify-content-center col-11 col-lg-4">
+                        <img src="../images/leader-2.jpg" alt="Líderes de Bonfire" class="leader-photo-1">
+                        <strong><p class="leader-name-2">Juan Nicolás Gana</p></strong>
+                        <p class="leader-description">Empresario argentino conocido por ser fundador, presidente y director ejecutivo de Mercado Libre y heredero de la curtiembre SADESA.​</p>
+                    </div>
+                    <div class="leader-box justify-content-center col-11 col-lg-3">
+                        <img src="../images/leader-3.jpg" alt="Líderes de Bonfire" class="leader-photo-1">
+                        <strong><p class="leader-name-3">Ana Victora Ibáñez</p></strong>
+                        <p class="leader-description">Docente especializada en la enseñanza del inglés, trabajando con alumnos de entre 10 y 16 años durante los últimos 4 años en el sector privado. El 91% de mis alumnos aprobaron la asignatura durante mi último año de docencia, implementando unidades didácticas propias, adaptadas a las necesidades de cada grupo de estudiantes.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+    <!-- Partners -->
     <section class="partners">
-        <div class="partners-box">
-            <p>Partners</p>
-            <ul>
-                <li><a href="#" target="_blank"><img src="#" alt="Partner logo"></a></li>
-                <li><a href="#" target="_blank"><img src="#" alt="Partner logo"></a></li>
-                <li><a href="#" target="_blank"><img src="#" alt="Partner logo"></a></li>
-                <li><a href="#" target="_blank"><img src="#" alt="Partner logo"></a></li>
-                <li><a href="#" target="_blank"><img src="#" alt="Partner logo"></a></li>
-                <li><a href="#" target="_blank"><img src="#" alt="Partner logo"></a></li>
+        <div class="partners-box" >
+            <h3>Partners</h3>
+            <ul class="row">
+                <li class="col-4 col-lg-2 d-flex justify-content-center"><a href="#" target="_blank"><i class="fa-brands fa-google"></i></a></li>
+                <li class="col-4 col-lg-2 d-flex justify-content-center"><a href="#" target="_blank"><i class="fa-brands fa-wix"></i></a></li>
+                <li class="col-4 col-lg-2 d-flex justify-content-center"><a href="#" target="_blank"><i class="fa-brands fa-wikipedia-w"></i></a></li>
+                <li class="col-4 col-lg-2 d-flex justify-content-center mt-5 mt-lg-0"><a href="#" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
+                <li class="col-4 col-lg-2 d-flex justify-content-center mt-5 mt-lg-0"><a href="#" target="_blank"><i class="fa-brands fa-pinterest"></i></a></li>
+                <li class="col-4 col-lg-2 d-flex justify-content-center mt-5 mt-lg-0"><a href="#" target="_blank"><i class="fa-brands fa-python"></i></a></li>
             </ul>
         </div>
     </section>
+    <!-- Footer -->
     <footer>
-        <div>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Cursos</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Acceder</a></li>
+        <div class="row">
+            <ul class="col-12 col-lg-3 d-flex flex-column ">
+                <li><a href="../index.html" target="_self">Inicio</a></li>
+                <li><a href="./cursos.html" target="_self">Cursos</a></li>
+                <li><a href="./nosotros.html" target="_self">Nosotros</a></li>
+                <li><a href="./faq.html" target="_self">FAQ</a></li>
+                <li><a href="./contacto.html" target="_self">Contacto</a></li>
             </ul>
-            <ul>
-                <li><a href="#">Prensa</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Cursos</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Acceder</a></li>
+            <ul class="col-12 col-lg-3">
+                <li><a href="#" target="_self">Prensa</a></li>
+                <li><a href="#" target="_self">Acceder</a></li>
             </ul>
-            <div class="footer-newsletter">
+            <div class="footer-newsletter col-12 col-lg-6">
                 <form action="#">
                     <input type="text">
                     <input type="submit">
                 </form>
             </div>
         </div>
-        <div>
-            <p>Todos los derechos reservados - 2022</p>
-            <ul>
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-tiktok"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fa-light fa-envelope"></i></a></li>
+        <div class="lower-footer container-fluid">
+            <p class="copyright col-12">Bonfire - Todos los derechos reservados - 2022</p>
+            <ul class="footer-social-icons">
+                <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
             </ul>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
 </html>
